@@ -1,12 +1,0 @@
-(
-
-cp $SPELL_DIRECTORY/Makefile $SOURCE_DIRECTORY &&
-cp $SPELL_DIRECTORY/bcast2000.sh $SOURCE_DIRECTORY &&
-./configure &&
-make &&
-make install &&
-cp /usr/bcast/bcast2000.sh /usr/bin/.
-
-
-
-) > $C_FIFO 2>&1
