@@ -1,1 +1,0 @@
-depends  gcc2
