@@ -1,16 +1,0 @@
-SPELL=bcast
-VERSION=2000c
-SOURCE=$SPELL-$VERSION-src.tar.gz
-SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
-SOURCE_URL[0]=http://www.brouhaha.com/~eric/broadcast2000/$SOURCE
-WEB_SITE=http://www.brouhaha.com/~eric/broadcast2000/
-ENTERED=20020606
-UPDATED=20020606
-MD5[0]=326f909758564c2ca44d51460158601b
-LICENSE[0]=GPL
-MAINTAINER="unet@sourcemage.org"
-SHORT="Broadcast 2000 is a software for video editing."
-cat << EOF
-Broadcast 2000 is a software for video editing.
-EOF
-
