@@ -1,7 +1,0 @@
-#!/bin/sh
-
-BCASTDIR=/usr/bcast
-
-export LD_LIBRARY_PATH=$BCASTDIR:$LD_LIBRARY_PATH
-export PATH=$BCASTDIR:$PATH
-exec $BCASTDIR/bcast2000 $@
