@@ -1,9 +1,0 @@
-2004-02-10 Arwed v. Merkatz <v.merkatz@gmx.net>
-	* DEPENDS, USEGCC2: readded USEGCC2 and made it depend on gcc2,
-	totally breaks with gcc 3.3
-
-2002-10-22 Eric Schabell <eschabell@sourcemage.org>
-	* Removed gcc2 file.
-
-2002-10-05 Seth Woolley <seth@tautology.org>
-	* Added this history, made USEGCC2 to make it compile,  fixed old grimoire references in BUILD, too.
