@@ -1,3 +1,7 @@
+2004-02-18 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* video/bcast/*: removed bcast spell, the software is unmaintained and
+	broken
+
 2004-01-29 Eric Sandall <eric@sandall.us>
 	* Moved z-video/xvid to devel grimoire video-libs/xvid
 
